[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://scripts/aircraft/aircraft_controller.gd" id="1"]
[ext_resource type="Script" path="res://scripts/aircraft/aerodynamics_engine.gd" id="2"]
[ext_resource type="Resource" path="res://resources/aircraft_configs/swordfish.tres" id="3"]

[node name="Aircraft" type="RigidBody2D"]
script = ExtResource("1")
aircraft_data = ExtResource("3")
gravity_scale = 1.0
mass = 1.0
angular_damp = 1.5
linear_damp = 0.1

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="GearSprite" type="Sprite2D" parent="."]

[node name="EngineAudio" type="AudioStreamPlayer2D" parent="."]
autoplay = true

[node name="AerodynamicsEngine" type="Node" parent="."]
script = ExtResource("2")

[sub_resource type="CapsuleShape2D" id="1"]
radius = 12.0
height = 48.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("1")
